# tree-sitter-nasal

./: .gitignore  Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
corpus/: basic.txt
queries/: brackets.scm  config.toml  highlights.scm  indents.scm  outline.scm
src/: grammar.json  node-types.json  parser.c
