[package]
name = "tree-sitter-nasal"
description = "Nasal grammar for the tree-sitter parsing library"
version = "0.0.1"
license = "GPL-2.0"
authors = ["LIANG Sidi <sidi.liang@gmail.com>"]
edition = "2021"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "~1.0.79"
